@@ -1,5 +1,8 @@
 2011-04-07  Jason Merrill  <jason@redhat.com>
 
+	* g++.dg/cpp0x/sfinae11.C: New.
+	* g++.dg/cpp0x/noexcept02.C: Fix.
+
 	* g++.dg/cpp0x/sfinae10.C: New.
 
 	* g++.dg/cpp0x/sfinae7.C: New.
